# PaperTrail

./: .gitignore  README.md  gds_analysis.py  ingest.py  preprocess.py  pyproject.toml  queries.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md  task.md
configs/: config.yaml
data/: airlines_clean.csv  airports_clean.csv  routes_clean.csv
src/: dataset.py  model.py  train.py  tune.py  utils.py
