[project]
name = "papertrail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.4",
    "matplotlib>=3.11.0",
    "optuna>=4.9.0",
    "torch>=2.11.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.26.0",
    "wandb>=0.28.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
